--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/aurimas-darguzis/chat-bot/issues"
   },
-  "homepage": "https://github.com/aurimas-darguzis/chat-bot#readme"
+  "homepage": "https://github.com/aurimas-darguzis/chat-bot#readme",
+  "dependencies": {
+    "apiai": "^4.0.3",
+    "express": "^4.15.4",
+    "socket.io": "^2.0.3"
+  }
 }
